Added endpoint for getting the area.
