# src/server/api/api.yaml
@@ -93,6 +93,42 @@ paths:
           description: Records successufully found
           schema:
             $ref: '#/definitions/Records'
+  /api/find/area:
+    get:
+      summary: Find Area Records
+      description: Find the records for flights within a give geo area
+      produces:
+      - application/json
+      parameters:
+      - in: query
+        name: left
+        required: true
+        type: number
+        minimum: -180
+        maximum: 180
+      - in: query
+        name: right
+        required: true
+        type: number
+        minimum: -180
+        maximum: 180
+      - in: query
+        name: top
+        required: true
+        type: number
+        minimum: -90
+        maximum: 90
+      - in: query
+        name: bottom
+        required: true
+        type: number
+        minimum: -90
+        maximum: 90
+      responses:
+        200:
+          description: Records successufully found
+          schema:
+            $ref: '#/definitions/Records'
 definitions:
   Records:
     type: 'array'
@@ -103,8 +139,7 @@ definitions:
       - generation
       - startDate
       - endDate
-      - latitude
-      - longitude
+      - location
       - imagePath
       properties:
         drone:
@@ -121,12 +156,15 @@ definitions:
           type: string
           format: date-time
           example: 2016-08-29T09:12:33.001Z
-        latitude:
-          type: number
-          example: 30.02
-        longitude:
-          type: number
-          example: 40.789
+        location:
+          type: array
+          items:
+            type: number
+            minimum: -180
+            maximum: 180
+          minItems: 2
+          maxItems: 2
+          example: [30.02, 40.789]
         imagePath:
           type: string
           format: uri
